<resources>
    <string name="app_name">Final Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="term_fragment">term_fragment</string>
    <string name="term_fragment_label">Terms</string>
    <string name="create_term_header">Create a new term here!</string>
    <string name="create_term_title">Title</string>
    <string name="create_term_start">Starting Date</string>
    <string name="create_term_end">Ending Date</string>
    <string name="create_term_button">Create</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="untitled">Untitled</string>
    <string name="title_activity_term">Term Detail View</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



    <string name="term_list_header">List of Terms</string>
    <string name="term_list_description">Click on term title to edit and view.</string>

    <string name="detail_term_header">Detailed term view</string>
    <string name="detail_term_description">Edit term data and save.</string>
    <string name="class_list_header">List of Classes</string>
    <string name="class_list_description">Click on class title to edit and view.</string>

    <string name="assmnt_list_header">List of Assessments</string>
    <string name="assmnt_list_description">These detail views are editable.</string>
    <string name="note_list_header">List of Notes</string>
    <string name="note_list_description">These detail views are editable.</string>

    <string name="detail_course_header">Course detail view.</string>
    <string name="detail_course_description">Edit course data and save.</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>




    <string name="save">Save</string>
    <string name="create_course">Add Class</string>

    <string name="ok">OK!</string>

    <string name="term_appbar_title">Term Details</string>
    <string name="back">Back</string>

    <string name="title_activity_course">Course</string>
    <string name="course_detail_header">Course Detail View:</string>
    <string name="course_additions_header">Assessments and notes:</string>
    <string name="course_title">Title:</string>
    <string name="course_start">Start date:</string>
    <string name="course_end">End date:</string>
    <string name="course_status">Status:</string>
    <string name="course_name">Instructor:</string>
    <string name="course_phone">Phone:</string>
    <string name="course_email">Email:</string>
    <string-array name="course_status_options">
        <item>In Progress</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string-array name="assmnt_types">
        <item>O</item>
        <item>p</item>
    </string-array>
    <string name="add_assmnt">Add Assessmnt</string>
    <string name="add_note">Add Note</string>
    <string name="set_alert">Set Alert</string>
    <string name="send_sms">Send SMS</string>
</resources>